# tatake_backend_251020

./: .coverage  .env  .env copy  .env copy.example  .env.development  .env.example  .env.production  .env.unified  .gitignore  .pre-commit-config.yaml  .pre-commit-zero-bug.yaml  .pylintrc  0_prompts_donot_delete.md  AGENT_CONFIG_ISSUE_ANALYSIS_REPORT.md  API_TEST_REPORT.md  AUTHENTICATION_SYSTEM_TESTING_IMPROVEMENT_PLAN.md  AUTH_MICROSERVICE_CONNECTION_FIX_REPORT.md  CHAT_API_FIX_SUCCESS_REPORT.md  CLAUDE.md  CRITICAL_ANALYSIS_AND_SOLUTION.md  DEPLOY_CORS_FIX.md  DOCKER_DEPLOY.md  Dockerfile  ENGINEERING_TEST_SYSTEM.md  FINAL_API_TEST_REPORT.md  FINAL_SOLUTION_GUIDE.md  FINAL_SOLUTION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  JWT_AUTH_REFACTOR_SUMMARY.md  LANGGRAPH_VERSION_FIX_REPORT.md  README.md  REAL_ROOT_CAUSE_ANALYSIS.md  SYSTEM_TEST_ANALYSIS_REPORT.md  USER_API_UUID_FIX_REPORT.md  UUID_FORMAT_FIX_SUCCESS_REPORT.md  UUID_PREVENTION_INTEGRATION_GUIDE.md  analyze_langgraph_issue.py  analyze_typeddict_issue.py  api_test_report_20251112_170156.txt  chat_tools_test_report.json  (+144 more)
deploy/: .dockerignore  .last_deploy  02-export-image.sh  03-upload-image.sh  04-deploy-image.sh  04a-extract-image.sh  04b-deploy-container.sh  04c-health-check.sh  05-test-deployment.sh  Dockerfile  README.md  deploy-all.sh  deploy.env  deploy.env.example  deploy.sh  rollback.sh  ssh-utils.sh
docs/: API_LAYER_DOCUMENTATION.md  API全面测试报告.md  API完整文档.md  CHAT_MICROSERVICE_CONFIG.md  PostgreSQL_Schema_最佳实践.md  TASK_MICROSERVICE_MIGRATION.md  data-layer-implementation-summary.md  enhanced_profile_implementation_summary.md  langgraph-enhancement-summary.md  test-quality-analysis.md  testing-analysis.md  testing-system-design.md  ultrathink-enhanced-testing-architecture.md  ultrathink_测试系统使用指南.md  uuid_type_system.md  数据层接口使用手册.md  数据层接口快速参考.md  测试覆盖度改进实施报告.md  零Bug测试体系-最终验证报告.md  零Bug测试体系-重新设计.md  零Bug测试体系实施总结报告.md  零bug测试体系架构设计.md  零bug测试体系设计.md  项目变更报告_任务完成奖励系统.md  项目变更报告_奖励系统v4重构.md
openspec/: AGENTS.md  project.md
scripts/: README-04-deployment.md  api_health_monitor.py  coverage_analysis.py  drop_task_tables.py  drop_task_tables_auto.py  init_data.py  init_schemas.sql  migrate_to_schemas.py  quick_api_check.sh  run_domain_tests.py  run_tests.py  startup_validation.py  validate_openapi.py  zero_bug_quality_monitor.py
streamlit_app/: README.md  README_修复指南.md  __init__.py  api_client.py  config.py  main.py  state_manager.py
tests/: README.md  complete_api_test.py  comprehensive_api_test.py  conftest.py  conftest_zero_bug.py  mock_microservice_simulation.py  production_api_test.py  quick_microservice_test.py  real_microservice_test.py  simple_frontend_simulation.py  simple_real_test.py  system_test.py  test_chat_domain.py  test_game_config.py  test_schemas_syntax.py  (+5 more)
(+977 files in other folders)
